--- a/WA/wa7.html
+++ b/WA/wa7.html
@@ -18,6 +18,6 @@
         <a>More</a>
         <a>Socials</a>
     </nav>
-    <img src="../IMG/Pokereed.png">
+    <img src="../IMG/Pokereed.png" alt="das me">
 </body>
 </html>
