--- a/CSS-Midterm/index.html
+++ b/CSS-Midterm/index.html
@@ -64,7 +64,7 @@
                 ABOUT
             </h3>
             <h3 class="text3">
-                Check it
+                Some brief things about me
             </h3>
         </div>
         <div class="pf">
