--- a/CSS-Midterm/index.html
+++ b/CSS-Midterm/index.html
@@ -53,7 +53,8 @@
         <a href="./imagescss/ResumeText2022.pdf">Resume</a>
     </nav>
     <div class="home">
-        <img src="../IMG/Pokereed.png" alt="das me">
+        <a href="https://reed0h.github.io/CSS-Midterm/index.html">
+        <img src="../IMG/Pokereed.png" alt="das me"></a>
         <h3 class="text1">
             Home
         </h3>
